--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@capacitor/status-bar": "5.0.2",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@ionic/storage": "^3.0.6",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "https-server": "^0.1.2",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,6 +45,7 @@
     "jsdom": "^21.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-pwa": "^0.14.7",
     "vitest": "^0.29.2"
   },
   "description": "An Ionic project"
